# breeze

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README-DEPLOYMENT.md  README.md  com.breeze-mcp.server.plist  com.breeze-mcp.server.plist.template  context.md  docker-compose.yml  fast_indexer.py  install-launch  install-launchd.py  install-launchd.sh  main.py  pyproject.toml  requirements.txt  results.md  test_breeze.py  test_server_issue.py
.claude/: settings.local.json
breeze/: __init__.py  __main__.py  cli.py
breeze/core/: __init__.py  chunking.py  config.py  content_detection.py  embeddings.py  engine.py  file_discovery.py  models.py  queue.py  rate_limiter.py  snippets.py  text_chunker.py  tokenizer_utils.py  tree_sitter_queries.py
breeze/mcp/: __init__.py  server.py
breeze/tests/: __init__.py  chunker_acceptance.py  conftest.py  mock_embedders.py  test_chunking_integration.py  test_content_detection.py  test_final_rate_limit_fix.py  test_gitignore_filtering.py  test_indexing_with_rate_limits.py  test_langchain_integration.py  test_local_embedder_chunking.py  test_mcp_server.py  test_model_aware_chunker.py  test_performance_isolation.py  test_project_management.py  test_queue.py  test_queue_operations.py  test_queue_simple.py  test_rate_limit_fix.py  test_rate_limiter.py  test_rate_limiting.py  test_rate_limiting_issue.py  test_reranking.py  test_snippets.py  (+3 more)
docs/: architecture.md  cli-reference.md  concurrency.md  configuration.md  deployment.md  getting-started.md  index.md  mcp-tools.md  troubleshooting.md
(+4 files in other folders)
